test webrtc video streaming

--- a/index-cold.html
+++ b/index-cold.html
@@ -29,6 +29,6 @@
     <!-- TODO: initial popup info box with project name, authors, etc. -->
 
     <!-- let's light this candle! -->
-    <script src="main.js" type="module"></script>
+    <script src="client.js" type="module"></script>
 </body>
 </html>
