--- a/WebsiteUI/website2.html
+++ b/WebsiteUI/website2.html
@@ -8,8 +8,12 @@
 
     <body>
         <div class = "main-grid">
+
+            <!--Left Column-->
             <div class = "column">
-                <div> <!--Video-->
+                <!--Video-->
+
+                <div> 
                     <video class = "video" src = "movie.mov" width = 100% controls></video>
                 </div>
 
@@ -22,7 +26,10 @@
                 </div>
             </div>
 
+            <!--Right Column-->
             <div class = "column">
+
+                <!--Chat Transcription-->
                 <div class = "feature-box" style = "height: 40vh;">
                     <div class = "title">
                         Chat Transcript
@@ -35,7 +42,7 @@
 
                 </div>
 
-
+                <!--Sonograph-->
                 <div class = "feature-box" style = "height: 20vh">
                     <div class = "title">
                         Sonograph
@@ -55,6 +62,7 @@
                     </div>
                 </div>
 
+                <!--Graph-->
                 <div class = "feature-box" style = "height: 20vh;">
                     <div class = "title">
                         Graph
@@ -66,6 +74,8 @@
                         </canvas>
                     </div>
                 </div>
+
+                <!--Diagnosis-->
                 <div class = "feature-box" style = "height: 20vh;">
                     <div class = "title">
                         Diagnosis
