add webrtc video streaming functionality

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <video id="video" autoplay="true" playsinline="true"></video>
+    <script src="main.js"></script>
 </body>
 </html>
