add basic html templating

--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <video id="video" autoplay="true" playsinline="true"></video>
+    <main>
+        <!-- Left column -->
+        <div class="column">
+            <video id="video" autoplay="true" playsinline="true"></video>
+        </div>
+        <!-- Right column -->
+        <div class="column">
+            <canvas id="canvas"/>
+        </div>
+    </main>   
     <script src="main.js"></script>
 </body>
 </html>
