added some spectrogram visualization

--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
         </div>
         <!-- Right column -->
         <div class="column">
-            <canvas id="canvas"/>
+            <div class="row">
+                <canvas id="canvas"></canvas>
+            </div>
+            <div class="row">
+                <button id="speech-button"></button>
+            </div>
         </div>
     </main>   
     <script src="main.js"></script>
