add loading screen

--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
                 <button id="speech-button"></button>
             </div>
         </div>
-    </main>   
+    </main>
+
+    <!-- Loading screen -->
+    <div id="cover-background">
+        <div id="cover-circle"></div>
+    </div>
+
     <script src="main.js"></script>
 </body>
 </html>
