final changes before video recording

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                 <p>
                     Transcription: "<span id="transcription"></span>"
                 </p>
+                <p>
+                    Label: <span id="label"></span>
+                </p>
                 
 
                 <p class="annotation">
